Freedom Sanbox Ant Deploy/src/objects/Nav_Lookup__c.object
<CustomObject>
    <fields>
        <fullName>As_of_Date__c</fullName>
        <label>As of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NAV__c</fullName>
        <label>NAV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scheme_Name__c</fullName>
        <externalId>true</externalId>
        <label>Scheme Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Nav Lookup Table</label>
    <nameField>
        <displayFormat>N-{0000}</displayFormat>
        <label>Scheme Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nav Lookup Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>